# vidkosha_core

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OPEN_BACKLOG.md  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
agents/: agent_creator.md  agent_readme.md  agent_template.md  agents_index.md  chain_ops_agent.md  cto.md  researcher.md  senior_engineer.md
contexts/: category_seed.json  changelog.md  context.md  dao_operator_overview.md  dev_onboarding_next_steps.md  helix_schema.md  operator_prompt.md  plan_routing_graph_evolution.md  planning_graph.md  rag_plan.md  roadmap.md  specialist_marketplace.md  test_evaluation.md  testing_semantic_and_neighbors.md  vision_board.md
contexts/workstreams/: README.md  ckb_anchor_lite.md  ckb_indexing_lite.md  node_operator_lite.md  operator_registry_lite.md  treasury_policy_lite.md  workstream_template.md
datasets/: helix_finetune_samples.jsonl
helix-db/: helix.toml
helix-db/db/: queries.hx  schema.hx
helix-db/docs/: schema_overview.md
scripts/: export_helix_finetune_dataset.sh  seed_categories.sh  seed_general_topics.sh  seed_topics.sh
scripts/node-operator/: .env.example  README.md  bootstrap.sh  check_env_parity.sh  docker-compose.yml  ingest_seed.sh  seed_corpus.ndjson
src/: llm_client.rs  main.rs
src/agents/: agent.rs  mod.rs  specialists.rs  traits.rs
src/orchestrator/: mod.rs  router.rs
src/orchestrator/routing/: mod.rs  semantic.rs
src/rag/: agent.rs  client.rs  config.rs  embed.rs  helix.rs  mock.rs  mod.rs  topic_registry.rs  types.rs
